test_suite/tests/ui/unexpected-literal/container.stderr
error: unexpected literal in nested attribute, expected ident
 --> tests/ui/unexpected-literal/container.rs:4:9
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | #[serde("literal")]
  |         ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
