test_suite/tests/ui/unexpected-literal/container.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde("literal")]
struct S;

fn main() {}
